# save-windows-status

./: .env  Cargo.toml  README.md  save-windows-status.desktop  save-windows-status.service
src/: main.rs
